fdo#73655: Don't adjust formula tokens on non-top shared formula cells.

Only adjust tokens for non-shared formula cells and shared formuls cells
that are the top of their respective shared groups.

Change-Id: I9cd57653602c97504a802001947a28c4d03368a5
(cherry picked from commit 982a03d4e2baf4ca7e78c79014389d9b23e200d1)